committee page changes

--- a/src/pages/committee.astro
+++ b/src/pages/committee.astro
@@ -269,8 +269,8 @@ import BoardOfDirectors from '../components/BoardOfDirectors.astro';
                         </div>
                         <div class="testimonial-card">
                             <div class="testimonial-content">
-                                <p>"Joining the Powerlifting Committee was one of the best decisions I made at Spartacus. It was incredibly rewarding to work with friends to organize major events like the National Championships 2024 and the West-Regional Championship for 2025. Not only did I gain valuable organizational skills, but I also made lasting connections within the strength sports community that extend far beyond university."</p>
-                                <p class="testimonial-author">— Herman Skledar, Powerlifting Committee Member (2023-2025)</p>
+                                <p>"Being part of the social media committee for our student strength sports association is an absolute blast! It’s fun to create content, take sick photographs, share our members' achievements, and foster a supportive community. Every day is a new opportunity to inspire and be inspired. Come join us and experience the fun!"</p>
+                                <p class="testimonial-author">— Luca Simonetti, Social Media Committee Member (2024-2025)</p>
                             </div>
                         </div>
                         <div class="testimonial-card">
