commitee and footer justificatino text

--- a/src/components/BoardOfDirectors.astro
+++ b/src/components/BoardOfDirectors.astro
@@ -31,7 +31,7 @@ const {
     {
       name: "Jelle Smitss",
       role: "Vice Chair",
-      email: "Vice@tskvspartacus.nl",
+      email: "Vice-chair@tskvspartacus.nl",
       image: "/images/Board_2.png"
     },
     {
