--- a/src/pages/committee/boards.astro
+++ b/src/pages/committee/boards.astro
@@ -64,7 +64,7 @@ import '../../styles/global.css';
                                 <li>Chair support</li>
                             </ul>
                         </div>
-                        <p class="board-member-email"><a href="mailto:Vice@tskvspartacus.nl">Vice@tskvspartacus.nl</a></p>
+                        <p class="board-member-email"><a href="mailto:Vice-chair@tskvspartacus.nl">Vice-chair@tskvspartacus.nl</a></p>
                     </div>
                     
                     <div class="board-member">
