--- a/src/styles/Components/Footer.css
+++ b/src/styles/Components/Footer.css
@@ -43,13 +43,22 @@ footer::before {
   flex-wrap: wrap;
   justify-content: space-between;
   margin-bottom: 40px;
+  gap: 40px;
 }
 
 .footer-column {
   flex: 1;
-  flex-basis: 23%;
   min-width: 250px;
   margin-bottom: 30px;
+  padding-right: 30px;
+}
+
+.footer-column:first-child {
+  flex-basis: 30%;
+}
+
+.footer-column:not(:first-child) {
+  flex-basis: 20%;
 }
 
 .footer-column h3 {
@@ -160,11 +169,17 @@ footer::before {
 /* Responsive Footer */
 @media (max-width: 992px) {
   .footer-column {
-    flex-basis: 48%;
+    flex-basis: 45% !important;
+    padding-right: 20px;
   }
 }
 
 @media (max-width: 576px) {
+  .footer-column {
+    flex-basis: 100% !important;
+    padding-right: 0;
+  }
+  
   .social-links {
     justify-content: center;
   }
