member-contact-footer and index changes

--- a/src/pages/become-a-member.astro
+++ b/src/pages/become-a-member.astro
@@ -49,7 +49,7 @@ import '../styles/pages/membership.css';
                         </ul>
                     </div>
                     <div class="about-image">
-                        <img src="placeholder-membership.jpg" alt="Spartacus members training">
+                        <img src="images/Jelle.png" alt="Spartacus members training">
                     </div>
                 </div>
             </section>
@@ -62,7 +62,7 @@ import '../styles/pages/membership.css';
                     <li><strong>Pay the annual membership fee</strong> - The €25 fee will be automatically subtracted by incasso either around September or Februari</li>
                     <li><strong>Join our community</strong> - Get added to our WhatsApp groups to stay updated on all activities and add the Members Calendar</li>
                 </ol>
-                <p><strong>Note:</strong> To join Spartacus, you must also have a valid Tilburg University Sports Center membership.</p>
+                <p><strong>Note:</strong> To join Spartacus, you must also have a valid <a href="https://www.tilburguniversity.edu/campus/sports-center/sportsmembership" target="_blank">Tilburg University Sports Center membership</a>.</p>
                 <div class="text-center mb-40">
                 <br>
                     <a href="/register" class="btn">BECOME A MEMBER!</a>
@@ -78,7 +78,7 @@ import '../styles/pages/membership.css';
                     </br>
 
                     <h3>IS SPARTACUS ONLY FOR POWERLIFTERS?</h3>
-                    <p>While we have a strong focus on powerlifting, we support all strength sports including bodybuilding Olympic weightlifting and people who are less serious abotu the gym.</p>
+                    <p>While we have a strong focus on powerlifting, we support all strength sports including bodybuilding, Olympic weightlifting, and recreational fitness enthusiasts who enjoy training at their own pace.</p>
                     </br>
 
                     <h3>ARE INTERNATIONAL STUDENTS WELCOME?</h3>
@@ -117,7 +117,7 @@ import '../styles/pages/membership.css';
             <!-- Call to Action -->
             <section class="section text-center">
                 <h2 class="section-title centered-title">READY TO JOIN?</h2>
-                <p class="mb-40">Fill out the registration form after clicking on the link "become a member!" to register with T.S.K.V. Spartacus.</p>
+                <p class="mb-40">Fill out the registration form after clicking on the link "Become a Member" to register with T.S.K.V. Spartacus.</p>
                 <div>
                     <a href="/register" class="btn">BECOME A MEMBER!</a>
                     <a href="/contact" class="btn btn-secondary">CONTACT US WITH QUESTIONS</a>
