--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -65,7 +65,7 @@ import '../styles/pages/contact.css';
                     </br>
 
                     <h3>IS SPARTACUS ONLY FOR POWERLIFTERS?</h3>
-                    <p>While we have a strong focus on powerlifting, we support all strength sports including bodybuilding Olympic weightlifting and people who are less serious abotu the gym.</p>
+                    <p>While we have a strong focus on powerlifting, we support all strength sports including bodybuilding, Olympic weightlifting, and recreational fitness enthusiasts who enjoy training at their own pace.</p>
                     </br>
 
                     <h3>ARE INTERNATIONAL STUDENTS WELCOME?</h3>
