--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,7 +4,6 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 import '../styles/pages/contact.css';
-import '../styles/global.css';
 ---
 
 <!DOCTYPE html>
@@ -175,7 +174,7 @@ import '../styles/global.css';
             <section class="map-section">
                 <h2 class="section-title">FIND US</h2>
                 <div class="map-container">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2478.7619254255144!2d5.051944315772768!3d51.56444997964419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c6be0a5b299003%3A0xb5a72a2defe8458c!2sTilburg%20University%20Sports%20Center!5e0!3m2!1sen!2snl!4v1616776793939!5m2!1sen!2snl" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.3331766386664!2d5.05395891273433!3d51.562125406585736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c6be10e4850735%3A0x3e7d4d4ff6dc553f!2sTSKV%20Spartacus!5e0!3m2!1sen!2snl!4v1742764376582!5m2!1sen!2snl" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
         </div>
