--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -123,18 +123,18 @@ import '../styles/pages/contact.css';
                         <div class="contact-icon">
                             <i class="fas fa-user-shield"></i>
                         </div>
-                        <h3>Lisa Jansen</h3>
+                        <h3>Marlijn</h3>
                         <p>Confidential Contact Person</p>
-                        <a href="mailto:confidential1@tskvspartacus.nl" class="contact-email">confidential1@tskvspartacus.nl</a>
+                        <a href="mailto:confidential1@tskvspartacus.nl" class="contact-email">marlijn@tskvspartacus.nl</a>
                     </div>
                     
                     <div class="confidential-contact-card">
                         <div class="contact-icon">
                             <i class="fas fa-user-shield"></i>
                         </div>
-                        <h3>Mark de Groot</h3>
+                        <h3>Wystke</h3>
                         <p>Confidential Contact Person</p>
-                        <a href="mailto:confidential2@tskvspartacus.nl" class="contact-email">confidential2@tskvspartacus.nl</a>
+                        <a href="mailto:confidential2@tskvspartacus.nl" class="contact-email">wytske@tskvspartacus.nl</a>
                     </div>
                 </div>
             </div>
